<resources>
    <string name="app_name">BookApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_user_signup">Not have Account? <b>SignUp</b></string>
    <string name="search">Search</string>
    <string name="add_a_new_category">Add a new Category</string>
    <string name="category_title">Category Title</string>
    <string name="submit">Submit</string>
    <string name="dashboard_admin">Dashboard Admin</string>
    <string name="a_example_com">a@example.com</string>
    <string name="add_category">+ Add Category</string>
    <string name="dashboard_user">Dashboard User</string>
    <string name="forget_password">Forget Password</string>
    <string name="enter_email_to_receive">Enter you registered email to receive instructions to rese you password.</string>
    <string name="email">Email</string>
    <string name="please_login">Please Login</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="welcome_to_book_app">Welcome to Book App</string>
    <string name="continue_without_login">Continue without login</string>
    <string name="add_a_new_book">Add a new Book</string>
    <string name="book_title">Book Title</string>
    <string name="book_description">Book Description</string>
    <string name="book_category">Book Category</string>
    <string name="upload">Upload</string>
    <string name="book_details">Book Details</string>
    <string name="category">Category</string>
    <string name="n_a">N/A</string>
    <string name="date">Date</string>
    <string name="size">Size</string>
    <string name="views">Views</string>
    <string name="downloads">Downloads</string>
    <string name="pages">Pages</string>
    <string name="the_description_of_the_book">The description of the book.</string>
    <string name="download">Download</string>
    <string name="edit_book_info">Edit book info</string>
    <string name="update">Update</string>
    <string name="books">Books</string>
    <string name="create_new_account">Create New Account</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="the_book_title">The Book Title</string>
    <string name="_0mb">0 MB</string>
    <string name="dd_mm_yyyy">dd/MM/yyyy</string>

</resources>